Backface visibility on fixed elements

--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -11,6 +11,7 @@ body:after {
   content: '';
   background: $bodyBorderColor;
   z-index: $z-indexFixedBorders;
+  backface-visibility: hidden;
 }
 
 body:before {
