--- a/assets/css/_header-archive.scss
+++ b/assets/css/_header-archive.scss
@@ -7,6 +7,7 @@
   height: 100%;
   background: $colorMain;
   transition: .3s .3s;
+  backface-visibility: hidden;
   &__content {
     width: 100%;
     height: 100%;
